<resources>
    <string name="app_name">LedNotifyBridge</string>
    <string name="title_activity_settings">Led Notify Bridge</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Port</string>
    <string name="pref_server_timeout">Request Timeout</string>
    <string name="pref_allowed_packages">Allowed Packages</string>
    <string name="pref_description_allowed_packages">Packages of Notification to handle</string>
    <string name="pref_key_allowed_packages">key_allowed_packages</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
</resources>
